Set the default RSSI multiplier to a value less than 1.0

Setting the default RSSI multiplier to a value less than 1.0
allows network quality estimator (NQE) to query signal strength
and index cached network quality by signal strength.

Bug: 817102
Change-Id: Ia507f381660ead29cfff8263415618f14e44eeb4
Reviewed-on: https://chromium-review.googlesource.com/940274
Commit-Queue: Tarun Bansal <tbansal@chromium.org>
Reviewed-by: Ryan Sturm <ryansturm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540027}
Former-commit-id: 1221a49b85e0b6b9c99699f60076045bdacd8dea